[gd_scene load_steps=5 format=3 uid="uid://ht5w7clnj0dr"]

[ext_resource type="Script" path="res://GameplayThings/Items/DoneItems/ky_scene.gd" id="1_3bwtb"]
[ext_resource type="Resource" uid="uid://dy0on7obdhpok" path="res://GameplayThings/Items/DoneItems/key1.tres" id="2_vp31k"]
[ext_resource type="Texture2D" uid="uid://c66mghw7yejta" path="res://GameplayThings/Items/DoneItems/key-removebg-preview (1).png" id="3_jsr3h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o1eng"]
radius = 8.06226

[node name="KyScene" type="Node2D"]
script = ExtResource("1_3bwtb")
item = ExtResource("2_vp31k")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_o1eng")

[node name="Container" type="Container" parent="."]
offset_left = -4.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
scale = Vector2(1.53, 1.53)
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Container"]
position = Vector2(3, 2)
scale = Vector2(0.042, 0.042)
texture = ExtResource("3_jsr3h")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="gui_input" from="Container" to="." method="_on_container_gui_input"]
